chore: [MGP-117] Add missing translations

--- a/i18n/fr_FR.csv
+++ b/i18n/fr_FR.csv
@@ -5,3 +5,4 @@ Hour,Heure
 Sale,Vente
 "Access Token","Authentification d’accès"
 "User ID","ID Utilisateur"
+"Go to previous step","Aller à l'étape précédente"
