--- a/i18n/it_IT.csv
+++ b/i18n/it_IT.csv
@@ -8,3 +8,4 @@ Sale,Vendita
 Configuration,Configurazione
 "Access Token","Token di accesso"
 "User ID","ID Utente"
+"Go to previous step","Vai al passo precedente"
