--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -9,3 +9,4 @@ Sale,Uitverkoop
 Configuration,Configuratie
 "Access Token",Toegangs-token
 "User ID",Gebruiker-ID
+"Go to previous step","Ga naar vorige stap"
