fix: [LP-1456] Fix alt tags for icons

--- a/i18n/de_CH.csv
+++ b/i18n/de_CH.csv
@@ -15,3 +15,4 @@ Configuration,Konfiguration
 "Access Token",Zugriffstoken
 "User ID",Benutzer-ID
 "Go to previous step","Zum vorherigen Schritt gehen"
+"Button icon","Knopf-Symbol"
