--- a/i18n/en_US.csv
+++ b/i18n/en_US.csv
@@ -26,3 +26,4 @@ Configuration,Configuration
 "User ID","User ID"
 "Media Api Url","Media Api Url"
 "User ID Api Url","User ID Api Url"
+"Button icon","Button icon"
