--- a/i18n/es_ES.csv
+++ b/i18n/es_ES.csv
@@ -6,3 +6,4 @@ Sale,Venta
 Configuration,Configuración
 "User ID","ID de Usuario"
 "Go to previous step","Ir al paso anterior"
+"Button icon","Icono de botón"
