--- a/i18n/it_IT.csv
+++ b/i18n/it_IT.csv
@@ -9,3 +9,4 @@ Configuration,Configurazione
 "Access Token","Token di accesso"
 "User ID","ID Utente"
 "Go to previous step","Vai al passo precedente"
+"Button icon","Icona del pulsante"
