--- a/i18n/pt_PT.csv
+++ b/i18n/pt_PT.csv
@@ -6,3 +6,4 @@ Sale,Venda
 Configuration,Configuração
 "Access Token","Token de Acesso"
 "User ID","ID de Utilizador"
+"Button icon","Ícone do botão"
