--- a/i18n/fr_FR.csv
+++ b/i18n/fr_FR.csv
@@ -6,3 +6,4 @@ Sale,Vente
 "Access Token","Authentification d’accès"
 "User ID","ID Utilisateur"
 "Go to previous step","Aller à l'étape précédente"
+"Button icon","Icône de bouton"
