--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -10,3 +10,4 @@ Configuration,Configuratie
 "Access Token",Toegangs-token
 "User ID",Gebruiker-ID
 "Go to previous step","Ga naar vorige stap"
+"Button icon","Knop icoon"
